# ros-cat

./: ARDUINO_TEST_SKETCH.ino  CODEBASE_FILE_TREE.md  COMPLETE_TESTING_GUIDE.md  EKF_ENABLED_PARAM_TEST.md  EKF_TF_DIAGNOSIS.md  EKF_TF_QUICK_FIX.md  EKF_TF_ROOT_CAUSE.md  FIX_EKF_DDS_DISCOVERY.md  FIX_SLAM_TF_ISSUE.md  ODOMETRY_NODE_ESP_RELAY.md  QUICK_REFERENCE.md  QUICK_START_MAPPING.md  README.md  SLAM_CAUSE_B_VERIFICATION.md  SLAM_PARAM_VERIFICATION.md  SLAM_QUICK_VERIFY.md  SOLUTION_SUMMARY.md  START_MAPPING_FIXED.md  TERMINAL_WORKFLOW.md  TESTING_SUMMARY.md  fix_ekf_dds_discovery.sh  frames_2025-12-02_23.46.42.gv  frames_2025-12-03_00.32.19.gv  frames_2025-12-03_00.49.11.gv  frames_2025-12-27_22.41.36.gv  frames_2025-12-31_19.43.35.gv  frames_2025-12-31_21.36.18.gv  frames_2026-01-01_04.13.37.gv  frames_2026-01-01_06.12.48.gv  frames_2026-01-01_06.20.28.gv  frames_2026-01-01_06.28.44.gv  frames_2026-01-02_15.12.03.gv  run_rover.sh  slam_params.yaml  start.sh  start_mapping.sh  start_mapping_complete.sh  start_slam_mapping.sh  test  test.pub  (+3 more)
bridge/: cmd_vel_bridge.py  fake_odom.py  laser_tf.py  nav2_params.yaml  scan_to_serial.py  scan_to_serial.py.save  static_odom.py
config/: ekf.yaml  ekf.yaml.save  lifecycle.yaml  nav2_params.yaml  nav2_safe.rviz
install/: local_setup.sh  local_setup.zsh  setup.sh
launch/: ekf.launch.py  (+1 more)
src/your_robot_bringup/: nav2_params.yaml  package.xml  setup.cfg  setup.py
src/your_robot_bringup/src/: setup.py
src/your_robot_bringup/src/your_robot_bringup/: .wheel_odom.py.swp  wheel_odom.py  wheel_odom.py.save
(+107 files in other folders)
